<resources>
    <string name="Login">Submit</string>
    <string name="button_label_friends">Friends</string>
    <string name="button_label_messages">Messages</string>
    <string name="button_label_settings">Settings</string>
    <string name="button_label_logout">Logout</string>
    <string name="enter_message_here_hint">Message Body</string>
    <string name="sendAsImageButton">Send as Image</string>
    <string name="button_import_text_label">Import Text</string>
    <string name="to">To</string>
    <string name="sendAsTextButtonLabel">Send as Text</string>
    <string name="saveImageButtonLabel">Save as Image</string>
    <string name="alert_text_verified_friends_only">You can only message a verified friend.</string>
    <string name="alert_text_select_friend_to_send_message">Select a friend to send a message to.</string>
    <string name="alert_text_write_a_message_to_send">Write a message to send.</string>
    <string name="button_label_passcode">Passcode</string>
    <string name="button_label_importing">Importing</string>
    <string name="button_label_save">Save</string>
    <string name="friendNameRecyclerView">Name</string>
    <string name="unknown_label">Unknown</string>
    <string name="button_label_invite">Invite</string>
    <string name="button_label_invite_again">Invite Again</string>
    <string name="label_verify_friend_number">%1$s\'s Code</string>
    <string name="label_verify_friend_user_number">Your Code</string>
    <string name="alert_text_passcode_field_empty">The passcode field is empty.</string>
    <string name="alert_text_verify_passcode_field_empty">Please verify your passcode.</string>
    <string name="alert_text_passcode_entries_do_not_match">Passcode entries do not match.</string>
    <string name="alert_text_secondary_passcode_field_empty">The destruction code field is empty.</string>
    <string name="alert_text_verify_secondary_passcode_empty">Please verify your destruction code.</string>
    <string name="alert_text_secondary_passcode_entries_do_not_match">Destruction code entries do not match.</string>
    <string name="alert_text_passcode_required_for_destruction_code">You cannot create a destruction code until you create a passcode.</string>
    <string name="alert_text_secondary_passcode_and_passcode_may_not_match">You cannot have a destruction code that is the same as your passcode.</string>
    <string name="alert_text_received_invitation">Received an invitation from %1$s. Send them an invitation to start communicating.</string>
    <string name="alert_text_passcode_required_to_proceed">Passcode required to proceed.</string>
    <string name="alert_text_unable_to_decode_message">Something went wrong. We were unable to decode this message.</string>
    <string name="alert_text_unable_to_decrypt_message">We were unable to decrypt this message.</string>
    <string name="alert_text_invitation_accepted">${sender.name} accepted your invitation. You can now communicate securely.</string>
    <string name="alert_text_unable_to_update_friend_status">Something went wrong, we were unable to update your friend status.</string>
    <string name="alert_text_which_friend_sent_this_message">Which friend sent this message?</string>
    <string name="alert_text_which_friend_sent_this_invitation">Which friend sent this invitation?</string>
    <string name="alert_text_friend_already_exists">You already have a friend with this name.</string>
    <string name="alert_text_friend_phone_already_exists">You already have a friend with this phone number.</string>
    <string name="alert_text_unable_to_process_request">Something went wrong. We were unable to process your request.</string>
    <string name="paste_message_for_import_hint">Paste your text here…</string>
    <string name="button_label_import_image">Import Image</string>
    <string name="button_label_about">About</string>
    <string name="about_user_guide_english" translatable="false">
        \n<b>About</b>

        \n\n<b>About Nahoft:</b>
        \n“Nahoft” is not a messaging app. It is a tool for encryption. Nahoft is an offline software for encrypting text messages on Android phones.
        \n\nEncrypting your text messages means that even if your message gets intercepted by a third party, that party can not read it. The only person that can read your message is the one with whom you exchanged your public key.
        \n\nNahoft is offline, which means you do not need to be connected to the internet to encrypt your messages.
        \n\nNahoft only encrypts text messages. Currently, it does not provide encrypted voice and video messages.
        \n\nNahoft can encrypt text messages as text. It also can encrypt them as a photo (Steganography.) You can send an encrypted text message or a photo containing a message via another channel that allows you to send the file (for example, SMS, MMS, or a messaging app that allows you to send the file unchanged.) So, the other person, after receiving the message, transfers the encrypted text or photo to Nahoft and reads it.
        \n\nFor the time being, Nahoft can be installed on phones that use the Android operating system.
        \n\nNahoft is not a messaging app. It only encrypts the user’s text messages. The user can send the encrypted message to another one through one of the messaging apps (in an insecure network or even using an insecure messaging app.) The other person should be using Nahoft as well. Both should have already exchanged the public keys with one another to enter the messages into this software and read the encrypted messages. Nahoft uses public keys that can be shared with others. It also creates a private key hidden in the app to read the sent messages between two users.
        \n\nNahoft’s goal is to make it possible for users to send secure messages even through insecure messaging apps and networks. It means that if a user does not have access to secure internet or can not use secure messaging apps (in the case of internet censorship, filtering, and total internet shutdown) and only have access to insecure messaging apps and networks inside the country, even in this case, the users can encrypt the text messages and send them in the network. So, even if the message gets intercepted, it will still not be intelligible since it is encrypted.
        \n\nNote: Public keys (also the private key) change whenever you delete and reinstall the app, as well as each time you change your phone and reinstall the app. So, each time you change your phone or delete the app and reinstall it, you need to exchange the keys with your friends.
        \n\nImportant: Nahoft is open-source software, and everyone can have access to its code.
    </string>
    <string name="about_user_guide_persian" translatable="false">
        
        \n (درباره) About \n
        
        \n درباره نهفت:  \n
        \n نهفت یک پیام‌رسان نیست، بلکه ابزاری برای رمزنگاری است. «نهفت» نرم‌افزار آفلاین برای رمزنگاری پیامهای متنی در گوشی‌های اندرویدی است. \n
        \n رمزنگاری کردن پیام متنی یعنی حتی اگر پیام ارسالی شما در میان راه توسط فرد سومی دیده شود، برای آن شخص سوم قابل خواندن نخواهد بود و تنها شخصی که شما کلید عمومی خود را با او رد و بدل کرده‌اید، می‌تواند پیام مورد نظر را بخواند. \n
        \n  این نرم‌افزار، آفلاین است، یعنی برای تبدیل پیام‌های متنی به پیام‌های رمزگذاری شده، نیازی به اینترنت آنلاین ندارد و می‌تواند بصورت مستقل و بدون اینترنت جهانی، پیام‌های نوشتاری را رمزنگاری کند. \n
        \n «نهفت» تنها پیام‌های متنی را رمزنگاری می‌کند و در حال حاضر امکان رمزنگاری پیام‌های صوتی و تصویری در آن فراهم نیست. \n
        \n نهفت می‌تواند پیام‌های متنی را هم بصورت یک متن رمزنگاری کند و هم می‌تواند آن را در داخل یک عکس، که شما انتخاب می‌کنید، پنهان کند. شما می‌توانید پیام متنی یا عکس حاوی پیام را از طریق دیگری که امکان ارسال فایل را فراهم می‌کند (مثلا ایمیل، یا اس‌ام‌اس یا ام‌ام‌اس، یا یک پیام‌رسان که امکان ارسال فایل بدون تغییر را فراهم می‌کند) بفرستید تا طرف مقابل نیز پس از دریافت، متن یا عکس رمزنگاری شده را به نهفت منتقل کند و پیام را بخواند. \n
        \n  «نهفت»، فعلا در سیستم عامل اندروید و در گوشی‌های موبایلی که از این سیستم عامل استفاده می‌کنند، قابل نصب است. \n
        \n نهفت یک پیام‌رسان نیست، بلکه تنها پیام‌های متنی کاربر را رمزنگاری می‌کند و کاربر می‌تواند پیام رمز‌نگاری شده را از طریق یکی از پیام رسان‌های خود (در شبکه‌ای ناامن و حتی با یک پیام‌رسان ناامن) به فرد دیگری ارسال کند که او نیز  از نهفت استفاده می‌کند. آنها باید  قبلا با هم کلیدهای عمومی خود را همرسان و جابجا کرده باشند تا پیام‌ها را بعد از دریافت وارد این نرم‌افزار کنند و متن نهایی را در آنجا بخوانند. نهفت از کلیدهای عمومی که قابل همرسانی با دیگران است، استفاده می‌کند و کلیدی خصوصی می‌سازد که در داخل نرم‌افزار پنهان شده و می‌تواند پیام‌های رد و بدل شده بین دو کاربر را بخواند. \n
        \n هدف «نهفت» این است که امکان ارسال پیام امن برای کاربران حتی در پیام‌رسان‌ها و شبکه‌های ناامن فراهم شود. به این معنی که اگر کاربری در شرایط خاص، دسترسی به شبکه امن اینترنت جهانی نداشت، و یا استفاده از پیام‌رسان‌های امن برای او امکان‌پذیر نبود (فرض کنید در شرایط سانسور، فیلترینگ و یا قطع کامل شبکه جهانی اینترنت) و تنها به پیام‌رسان‌های ناامن و یا شبکه‌های ناامن داخلی دسترسی داشت، حتی در اینصورت هم بتواند پیام خود را رمزنگاری کرده و در داخل این شبکه ارسال کند. در این صورت حتی اگر پیام او در میان راه توسط فرد سومی دیده شود، باز هم به علت آنکه رمزنگاری شده است، قابل خواندن نخواهد بود. \n
        \n توجه: با هر بار پاک کردن کامل نرم‌افزار نهفت و نصب دوباره آن و همچنین با هر بار تغییر گوشی شما و در نتیجه نصب دوباره نهفت، کلیدهای عمومی (و نیز کلید خصوصی) تغییر می‌کند. بنابراین هربار که گوشی شما تغییر می‌کند و یا نهفت را پاک کرده و دوباره نصب می‌کنید، باید دوباره با دوستان خود این کلیدها را جابجا کنید. \n
        
        \n مهم: نهفت یک نرم‌افزار  متن باز (اوپن‌سورس) است و همه می‌توانند به کدهای برنامه‌نویسی آن دسترسی داشته باشند. \n
        \n درباره سازندگان نهفت \n
        \n «نهفت» از جمله تولیداتی است که در برنامه ایران کوباتور۲ و تحت نظارت سازمان «اتحاد برای ایران» تهیه شده است. سازمان اتحاد برای ایران یک نهاد حقوق‌بشری است که مرکز آن در شهر برکلی، ایالت کالیفرنیا قرار دارد.  هدف این نهاد گسترش آزادی‌های مدنی در ایران، دفاع از حقوق بشر، حمایت از جامعه مدنی و ترغیب شهروندان به مشارکت از طریق فناوری است. \n

    </string>
    <string name="from">From</string>
    <string name="button_label_english" translatable="false">English</string>
    <string name="button_label_persian" translatable="false">فارسی</string>
    <string name="button_label_help">Help</string>
    <string name="import_text_label">Import Text</string>
    <string name="friends_info_activity_heading">Info</string>
    <string name="edit_friend_button">Edit Friend Button</string>
    <string name="edit_button">Edit</string>
    <string name="import_text">Import Text</string>
    <string name="verify_button">Verify</string>
    <string name="invite_button">Invite</string>
    <string name="decline_button">Decline</string>
    <string name="import_invitation_button">Import Invitation</string>
    <string name="button_descriptions">
        \nPress Invite to send a key to a new friend.
        \nPress Invite Again if you need to resend a key.
        \nPress Import Invitation to receive a key from your friend.
        \nPress Verify to compare and confirm that your keys match.
        \nPress Decline to reject the last key sent, and start the key exchange process again.</string>
    <string name="delete_friend_button">Delete Friend</string>
</resources>