<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUserGuideActivity"
    android:background="@color/royalBlueDark"
    android:paddingHorizontal="@dimen/padding_standard">

    <LinearLayout
        android:id="@+id/about_user_guide_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="@dimen/padding_standard"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/about_user_guide_button_english"
            android:text="@string/button_label_english"
            style="@style/AppTheme.BlueCapsuleButton"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
        <Button
            android:id="@+id/about_user_guide_button_persian"
            android:text="@string/button_label_persian"
            style="@style/AppTheme.BlueCapsuleButton" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_user_guide_button_container">
        <TextView
            android:id="@+id/about_user_guide_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans"
            android:text="@string/about_user_guide_persian"/>
    </ScrollView>

</RelativeLayout>