<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royalBlueDark"
    tools:context=".activities.UserGuideActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/nahoft_icons_help_50"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_help"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@drawable/button_text_color_light"
            android:textSize="@dimen/detail_name_text_size"
            android:fontFamily="@font/open_sans"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingBottom="32dp">

        <Button
            android:id="@+id/friends_user_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/user_guide_round_buttons"
            android:drawablePadding="@dimen/padding_standard"
            android:drawableTint="@drawable/button_text_color_light"
            android:text="@string/button_label_friends"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_light"
            android:textSize="@dimen/detail_name_text_size"
            android:textAlignment="textStart"
            android:fontFamily="@font/open_sans"/>

        <Button
            android:id="@+id/sending_messages_user_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/user_guide_round_buttons"
            android:drawablePadding="@dimen/padding_standard"
            android:drawableTint="@drawable/button_text_color_light"
            android:text="@string/button_label_messages"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_light"
            android:textSize="@dimen/detail_name_text_size"
            android:textAlignment="textStart"
            android:fontFamily="@font/open_sans" />

        <Button
            android:id="@+id/passcodes_user_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/user_guide_round_buttons"
            android:drawablePadding="@dimen/padding_standard"
            android:drawableTint="@drawable/button_text_color_light"
            android:text="@string/button_label_passcode"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_light"
            android:textSize="@dimen/detail_name_text_size"
            android:textAlignment="textStart"
            android:fontFamily="@font/open_sans" />

        <Button
            android:id="@+id/importing_user_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_standard"
            android:background="@drawable/user_guide_round_buttons"
            android:drawablePadding="@dimen/padding_standard"
            android:drawableTint="@drawable/button_text_color_light"
            android:text="@string/button_label_importing"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_light"
            android:textSize="@dimen/detail_name_text_size"
            android:textAlignment="textStart"
            android:fontFamily="@font/open_sans" />
    </LinearLayout>
</RelativeLayout>